Github pages required package.json entries

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://vhin0210.github.io/mqcristobal",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
