--- a/my-app/package.json
+++ b/my-app/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
